minor fix on mobile styles

--- a/src/app/components/dashboard/header/header.component.scss
+++ b/src/app/components/dashboard/header/header.component.scss
@@ -18,6 +18,7 @@
     order: 2;
     justify-content: space-around;
     flex-wrap: wrap;
+    margin-top: 20px;
   }
 }
 @media (max-width: 515px) {
