--- a/src/app/components/dashboard/truck-view/truck-view.component.scss
+++ b/src/app/components/dashboard/truck-view/truck-view.component.scss
@@ -50,6 +50,6 @@ div.buttons {
   }
   .td-contact {
     max-width: 210px;
-    overflow: hidden;
+    // overflow: hidden;
   }
 }
